wakefield: MainWindow WLToolkit CCE fix
remove old GTK workaround which causes launch failure with wayland
toolkit active (-Dawt.toolkit.name=WLToolkit)

old bugzilla issue ID: 198639